Enhance user authentication flow with return URL support and add logout functionality

--- a/ByteCore.Web/Views/Account/Dashboard.cshtml
+++ b/ByteCore.Web/Views/Account/Dashboard.cshtml
@@ -15,6 +15,7 @@
                         <h5 class="fw-bolder">@Model.Name</h5>
                         <p>Email: @Model.Email</p>
                         <a href="@Url.Action("Manage", "Account")" class="btn btn-primary">Manage Account</a>
+                        <a href="@Url.Action("Logout", "Account")" class="btn btn-danger">Logout</a>
                     </div>
                 </div>
             </div>
