Add quiz creation functionality with question and option management

--- a/ByteCore.Web/Views/Quizzes/Quiz.cshtml
+++ b/ByteCore.Web/Views/Quizzes/Quiz.cshtml
@@ -18,7 +18,7 @@
                     <div class="form-check mb-2">
                         <input class="form-check-input" type="radio" name="userAnswers[@i]" value="@j" id="q@(i)_@(j)">
                         <label class="form-check-label" for="q@(i)_@(j)">
-                            @Model.Questions[i].Options[j]
+                            @Model.Questions[i].Options[j].OptionText
                         </label>
                     </div>
                 }
