--- a/ByteCore.Web/Views/Quizzes/Quiz.cshtml
+++ b/ByteCore.Web/Views/Quizzes/Quiz.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ByteCore.Web.Models.QuizModel
 
 @{
-    ViewBag.Title = Model.Title;
-    Layout = "~/Views/Shared/_Layout.cshtml";
+ViewBag.Title = Model.Title;
+Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container mt-5">
@@ -11,21 +11,25 @@
     <form method="post" action="@Url.Action("Submit", "Quizzes", new { id = Model.Id })">
         @for (int i = 0; i < Model.Questions.Count; i++)
         {
-            <div class="mb-4 p-3 border rounded shadow-sm bg-light">
-                <h5 class="mb-3">Question @((i + 1).ToString()): @Model.Questions[i].QuestionText</h5>
-                @for (int j = 0; j < Model.Questions[i].Options.Count; j++)
-                {
-                    <div class="form-check mb-2">
-                        <input class="form-check-input" type="radio" name="userAnswers[@i]" value="@j" id="q@(i)_@(j)">
-                        <label class="form-check-label" for="q@(i)_@(j)">
-                            @Model.Questions[i].Options[j].OptionText
-                        </label>
-                    </div>
-                }
+        <div class="mb-4 p-3 border rounded shadow-sm bg-light">
+            <h5 class="mb-3">Question @((i + 1).ToString()): @Model.Questions[i].QuestionText</h5>
+            @for (int j = 0; j < Model.Questions[i].Options.Count; j++)
+            {
+            <div class="form-check mb-2">
+                <input class="form-check-input" type="radio" name="userAnswers[@i]" value="@j" id="q@(i)_@(j)">
+                <label class="form-check-label" for="q@(i)_@(j)">
+                    @Model.Questions[i].Options[j].OptionText
+                </label>
             </div>
+            }
+        </div>
         }
         <div class="text-center">
             <button type="submit" class="btn btn-success btn-lg">Submit Answers</button>
         </div>
     </form>
+
+    <div class="text-center mt-4">
+        <a href="@Url.Action("Edit", "Quizzes", new { id = Model.Id })" class="btn btn-primary">Edit Quiz</a>
+    </div>
 </div>
