--- a/ByteCore.Web/Views/Shared/_Navigation.cshtml
+++ b/ByteCore.Web/Views/Shared/_Navigation.cshtml
@@ -12,7 +12,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Home")">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Courses")">Courses</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Overview", "Courses")">Overview</a></li>
+                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Quizzes")">Quizzes</a></li>
                 @{
                     if (User.Identity.IsAuthenticated)
                     {
