--- a/ByteCore.Web/Views/Courses/Index.cshtml
+++ b/ByteCore.Web/Views/Courses/Index.cshtml
@@ -11,6 +11,9 @@
                 <span class="text-gradient d-inline">Courses</span>
             </h1>
         </div>
+        <div class="text-center mb-4">
+            <a href="@Url.Action("Create", "Courses")" class="btn btn-success">Create Course</a>
+        </div>
         <div class="row gx-5 justify-content-center">
             @foreach (var course in Model)
             {
