Refactor user and course management services to use business logic layer and update model namespaces

--- a/ByteCore.Web/Views/Account/Dashboard.cshtml
+++ b/ByteCore.Web/Views/Account/Dashboard.cshtml
@@ -1,4 +1,4 @@
-@model ByteCore.Web.Models.UserModel
+@model ByteCore.Domain.UserScope.User
 @{
     ViewBag.Title = "User Dashboard";
     Layout = "~/Views/Shared/_Layout.cshtml";
