--- a/ByteCore.Web/Views/Courses/Index.cshtml
+++ b/ByteCore.Web/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ByteCore.Web.Models.CourseModel>
+﻿@model IEnumerable<ByteCore.Domain.CourseScope.Course>
 @{
     ViewBag.Title = "Courses";
     Layout = "~/Views/Shared/_Layout.cshtml";
