--- a/ByteCore.Web/Views/Courses/Roadmap.cshtml
+++ b/ByteCore.Web/Views/Courses/Roadmap.cshtml
@@ -1,4 +1,4 @@
-﻿@model ByteCore.Web.Models.CourseModel
+﻿@model ByteCore.Domain.CourseScope.Course
 
 @{
     ViewBag.Title = $"{Model.Title} Roadmap";
