--- a/ByteCore.Web/Views/Account/Manage.cshtml
+++ b/ByteCore.Web/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-@model ByteCore.Web.Models.UserModel
+@model ByteCore.Domain.UserScope.User
 @{
     ViewBag.Title = "Manage Account";
     Layout = "~/Views/Shared/_Layout.cshtml";
