--- a/ByteCore.Web/Views/Courses/Create.cshtml
+++ b/ByteCore.Web/Views/Courses/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ByteCore.Web.Models.CourseModel
+﻿@model ByteCore.Domain.CourseScope.Course
 @{
     ViewBag.Title = "Create New Course";
     Layout = "~/Views/Shared/_Layout.cshtml";
